couleur du projet préparé

--- a/src/styles/settings/colors.scss
+++ b/src/styles/settings/colors.scss
@@ -8,7 +8,10 @@
     --color-black: #000;
 
     // Couleurs du projet
-    --color-primary: #0000ff;
+    --color-primary: linear-gradient(92.42deg, #4424BF 1.68%, #8236DA 98.61%);
+    --color-secondary: #23235E;
+    --color-button-header: #2824C0;
 
     --color-bg-primary: var(--color-white);
+    --color-bg-secondary: #F5F4FA;
 }
