--- a/src/styles/settings/fonts.scss
+++ b/src/styles/settings/fonts.scss
@@ -3,8 +3,8 @@
    ========================================================================== */
 /// Font family
 :root {
-    --font-primary: 'Tahoma';
-    --font-secondary: 'Arial';
+    --font-primary: 'Inter', sans-serif;
+    --font-secondary: 'Roboto', sans-serif;
 
     --font-size-content: 1.125rem;
 
