--- a/src/styles/elements/headings.scss
+++ b/src/styles/elements/headings.scss
@@ -4,7 +4,7 @@
 
 h1,
 h2 {
-    font-family: var(--font-secondary);
+    font-family: var(--font-primary);
     line-height: 1;
     font-weight: bold;
 }
@@ -17,4 +17,14 @@ h1 {
 h2 {
     font-size: var(--font-size-h2);
     // text-transform: uppercase;
+}
+
+h3{
+    font-size: var(--font-size-h3);
+    font-family: var(--font-secondary);
+}
+
+h4{
+    font-size: var(--font-size-h4);
+    font-family: var(--font-primary);
 }
