--- a/src/styles/settings/dimensions.scss
+++ b/src/styles/settings/dimensions.scss
@@ -13,6 +13,7 @@ $breakpoint-xl: 1920px;
     --spacing-xs: 5px;
     --spacing-sm: 15px;
     --spacing-md: 30px;
+    --spacing-md2: 40px;
     --spacing-lg: 50px;
     --spacing-xl: 100px;
 }
