--- a/src/styles/components/_section_témoignage.scss
+++ b/src/styles/components/_section_témoignage.scss
@@ -1,7 +1,9 @@
 .témoignage{
     background-color: var(--color-white);
+    padding-bottom: 120px;
 
     .wrapper{
+
 
         .surtitre{
             background: rgba(38,37,191,0.1);
@@ -46,13 +48,13 @@
 
             .card{
                 display: flex;
-                flex-direction: row;
-                justify-content:center;
-                align-items: flex-start;
                 padding: 40px;
-                filter: drop-shadow(0px 8px 24px rgba(8,25,70,0.08));
+                box-shadow: 0 8px 24px rgba(0, 13, 81, 0.08);
                 margin: var(--spacing-md2) var(--spacing-sm);
                 border-radius: 12px;
+                .content_card{
+                    margin: 0 var(--spacing-md2)
+                }
 
 
 
