--- a/src/styles/components/_section_pourquoi.scss
+++ b/src/styles/components/_section_pourquoi.scss
@@ -2,7 +2,7 @@
     background-color: var(--color-bg-secondary);
     margin: var(--spacing-md) 0;
     color: #3D424F;
-    padding: 80px 150px 120px;
+    padding: 80px 0;
 
     .wrapper{
         text-align: center;
@@ -45,5 +45,39 @@
             border-radius: 12px;
             filter: drop-shadow(0px 8px 24px rgba(8,25,70,0.08));
         }
+    }
+}
+
+@media screen and (max-width: $breakpoint-sm) {
+    .pourquoi{
+
+
+
+        h2{
+            font-size: 2.5rem;
+        }
+
+        h3{
+            font-size: 1.75rem;
+        }
+
+        p{
+            font-size: 1.25rem;
+        }
+        .cards{
+            flex-wrap: wrap;
+
+        }
+        .wrapper{
+            .card{
+                max-width: 45%;
+                padding: 40px 20px;
+                margin-bottom: 40px;
+
+            }
+        }
+
+
+
     }
 }
