--- a/src/styles/components/_section_témoignage.scss
+++ b/src/styles/components/_section_témoignage.scss
@@ -42,6 +42,11 @@
             padding: 24px 32px;
             color: var(--color-white);
             display: none;
+
+            img{
+                width: 7%;
+                margin: 0 var(--spacing-sm);
+            }
         }
         .cards{
             display: flex;
@@ -65,4 +70,39 @@
         }
 
     }
+}
+
+@media screen and (max-width: $breakpoint-sm) {
+.témoignage{
+
+    p{
+        font-size: 1.25rem;
+    }
+
+    h2{
+        font-size: 2.5rem;
+        margin: 0;
+    }
+    .wrapper{
+        .btn-témoignage{
+            display: none;
+        }
+        .btn-témoignage-2{
+            display: inline-block;
+        }
+
+        .cards{
+            flex-direction: column;
+            .card{
+                padding: 0;
+
+            }
+        }
+
+
+    }
+
+
+
+}
 }
